bon/tests/integration/ui/compile_fail/attr_on.stderr
error: this `#[builder(into)]` attribute is redundant, because `into` is already implied for this member via the `#[builder(on(...))]` at the top of the function
 --> tests/integration/ui/compile_fail/attr_on.rs:4:31
  |
4 | fn unnecessary_into(#[builder(into)] _x: String) {}
  |                               ^^^^

error: this `#[builder(overwritable)]` attribute is redundant, because `overwritable` is already implied for this member via the `#[builder(on(...))]` at the top of the function
 --> tests/integration/ui/compile_fail/attr_on.rs:7:38
  |
7 | fn unnecessary_ovewritable(#[builder(overwritable)] _x: String) {}
  |                                      ^^^^^^^^^^^^

error: this syntax is not supported in type patterns yet. If you have a use case for this, please open an issue at https://github.com/elastio/bon/issues.
 --> tests/integration/ui/compile_fail/attr_on.rs:9:15
  |
9 | #[builder(on(&dyn std::fmt::Debug, into))]
  |               ^^^

error: nested attributes are not allowed in the type pattern of #[builder(on(type_pattern, ...))]
  --> tests/integration/ui/compile_fail/attr_on.rs:12:17
   |
12 | #[builder(on(fn(#[attr] a: u32), into))]
   |                 ^

error: this empty `#[on]` attribute is unexpected; remove it or pass parameters in parentheses: `#[on(...)]`
  --> tests/integration/ui/compile_fail/attr_on.rs:15:11
   |
15 | #[builder(on)]
   |           ^^

error: expected parameters in parentheses
  --> tests/integration/ui/compile_fail/attr_on.rs:18:13
   |
18 | #[builder(on())]
   |             ^^

error: expected `,`
  --> tests/integration/ui/compile_fail/attr_on.rs:21:1
   |
21 | #[builder(on(_))]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this #[builder(on(type_pattern, ...))] contains no options to override the default behavior for the selected setters like `into`, `overwritable`, so it does nothing
  --> tests/integration/ui/compile_fail/attr_on.rs:24:1
   |
24 | #[builder(on(_,))]
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `builder` (in Nightly builds, run with -Z macro-backtrace for more info)
